# buscador-teses

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  app.py  compose.yml  mlflow.Dockerfile  noxfile.py  pyproject.toml  requirements.txt
notebooks/: rag.ipynb
src/: config.py  download.py  embeddings_extraction.py  extract_embeddings.py
src/assets/: prompt-rag.txt  prompt-text-to-chroma.txt
src/web/mypages/: homepage.py
src/web/mypages/rag/: qa.py
src/web/static/: style.css
tests/fixtures/vcr_cassettes/: get_all_datasets_with_resources.yaml
tests/unit/: conftest.py  test_download.py  test_extract_embeddings.py  test_qa.py
