[project]
name = "buscador-teses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "chromadb>=0.5.23",
    "fastapi[standard]>=0.115.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "prefect>=3.1.6",
    "pyarrow>=18.1.0",
    "pydantic-settings>=2.6.1",
    "requests>=2.32.3",
    "s3fs>=2024.10.0",
    "sentence-transformers>=3.3.1",
    "smart-open[s3]>=7.0.5",
    "streamlit>=1.41.1",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "typer>=0.13.1",
]

[project.optional-dependencies]
unit = [
    "pytest>=8.3.4",
    "vcrpy>=6.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pytest-cov>=6.0.0",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "mlflow[genai]>=2.19.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]
